--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://video_belajar:LGtf0RReoAsBtCai@cluster0.9q4jqfb.mongodb.net/Node-API?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+JWT_SECRET=ini_adalah_kunci_rahasia_saya_yang_sangat_panjang_dan_aman_123!@#
